--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -2,4 +2,18 @@
 <resources>
     <string name="app_name">ChipDefense</string>
     <string name="startGame">Start</string>
+    <string name="button_continue">Weiter</string>
+    <string name="failed">Level nicht geschafft.</string>
+    <string name="success">Alle Level geschafft!</string>
+    <string name="cleared">Level geschafft.</string>
+    <string name="last_stage">Letzter Level war %d.</string>
+    <string name="win">Gewonnen.</string>
+    <string name="next_stage">Nächster Level: %d</string>
+    <string name="coins_gathered">Gesammelte Coins: %d.</string>
+    <string name="game_start">Start des Spiels.</string>
+    <string name="continueGame">Weiter</string>
+    <string name="scoreboard_inf">Inf</string>
+    <string name="scoreboard_waves">Welle</string>
+    <string name="scoreboard_status">Status</string>
+    <string name="scoreboard_coins">Coins</string>
 </resources>
