fixed delay of faders; enhanced level selector

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="scoreboard_waves">Wave</string>
     <string name="scoreboard_status">Status</string>
     <string name="scoreboard_coins">Coins</string>
+    <string name="selectLevel">Select Level</string>
 </resources>
