--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="scoreboard_status">Status</string>
     <string name="scoreboard_coins">Coins</string>
     <string name="selectLevel">Select Level</string>
+    <string name="play_selected_level">Play selected level</string>
+    <string name="button_purchase">Get heroes</string>
 </resources>
