--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -16,4 +16,8 @@
     <string name="scoreboard_waves">Welle</string>
     <string name="scoreboard_status">Status</string>
     <string name="scoreboard_coins">Coins</string>
+    <string name="selectLevel">Levelauswahl</string>
+    <string name="play_selected_level">Spiele Level</string>
+    <string name="button_purchase">Upgrades kaufen</string>
+    <string name="level_entry">Level %d</string>
 </resources>
