--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ChipDefense</string>
-    <string name="startGame">Start</string>
+    <string name="startGame">Start new game</string>
     <string name="pref_filename" translatable="false">prefs.xml</string>
     <string name="button_continue">Continue</string>
     <string name="failed">Failed to clear stage.</string>
