--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -2,12 +2,12 @@
 <resources>
     <string name="app_name">ChipDefense</string>
     <string name="startGame">Nouveau jeu</string>
-    <string name="button_continue">Continuer</string>
+    <string name="button_continue">Reprendre le jeu</string>
     <string name="scoreboard_waves">Vague</string>
     <string name="scoreboard_inf">Inf</string>
     <string name="scoreboard_status">État</string>
     <string name="scoreboard_coins">Coins</string>
-    <string name="continueGame">Continuer</string>
+    <string name="continueGame">Reprendre le jeu</string>
     <string name="game_start">Début du jeu.</string>
     <string name="coins_gathered">Coins collectés : %d.</string>
     <string name="next_stage">Prochain niveau: %d</string>
