--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -18,8 +18,13 @@
     <string name="failed">Niveau échoué.</string>
     <string name="selectLevel">Choix de niveau</string>
     <string name="play_selected_level">Jouer le niveau choisi</string>
-    <string name="button_marketplace">Achat d\'améliorations</string>
+    <string name="button_marketplace">Recrutement</string>
     <string name="level_entry">Niveau %d</string>
     <string name="level_selector">Sélection de niveau</string>
     <string name="button_refund">Remise à zéro</string>
+    <string name="no">Non</string>
+    <string name="yes">Oui</string>
+    <string name="button_purchase">Recruter</string>
+    <string name="query_reset">Remettre à zéro tous les héros et héroïnes ?</string>
+    <string name="settings_about">A propos de ...</string>
 </resources>
