reverted gradle plugin to 1.7.10

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -56,7 +56,7 @@ Vorsicht: Der laufende Cryptocoin ist stärker als die gewöhnlichen Angreifer. 
     <string name="turing">
 "Alan Turing war eine der wichtigsten Persönlichkeiten in der Computerwissenschaft. Er legte viele der Grundlagen der theoretischen Informatik, unter anderem durch die Turing-Maschine und den Turing-Test. Außerdem entschlüsselte er den Enigma-Code im zweiten Weltkrieg. Sein Einfluss auf den Verlauf des Krieges kann kaum überschätzt werden.
 
-Turing wurde aufgrund seiner Homosexualität massiv diskriminiert. Er nahm sich 1954 vermutlich das Leben."
+Turing wurde aufgrund seiner Homosexualität massiv diskriminiert. Er starb 1954, vermutlich nahm er sich selbst das Leben."
     </string>
     <string name="button_purchase">Anheuern</string>
     <string name="query_reset">Möchtest du alle Heldinnen und Helden zurücksetzen?</string>
