--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">ChipDefense</string>
-    <string name="startGame">Neues Spiel</string>
-    <string name="button_continue">Spiel fortsetzen</string>
+    <string name="button_startGame">Neues Spiel</string>
+    <string name="button_resume">Spiel fortsetzen</string>
     <string name="failed">Level nicht geschafft.</string>
     <string name="success">Alle Level geschafft!</string>
     <string name="cleared">Level geschafft.</string>
