--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">ChipDefense</string>
-    <string name="startGame">Start new game</string>
+    <string name="button_startGame">Start new game</string>
     <string name="pref_filename" translatable="false">prefs.xml</string>
-    <string name="button_continue">Continue</string>
+    <string name="button_resume">Resume</string>
     <string name="failed">Failed to clear stage.</string>
     <string name="success">All stages cleared!</string>
     <string name="cleared">Stage cleared.</string>
